add various debug functionalities

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "files.associations": {
         "${workspaceFolderBasename}.map": ".txt",
-        "string.h": "c"
+        "string.h": "c",
+        "agb_debug.h": "c",
+        "gfx.h": "c"
     },
 
     "licenser.license": "GPLv3",
